crates/macro/tests/ui/module_with_bogus_link_name.stderr
error: expected `=`
 --> tests/ui/module_with_bogus_link_name.rs:6:16
  |
6 |     #[link_name("huh")]
  |                ^

error[E0539]: malformed `link_name` attribute input
  --> tests/ui/module_with_bogus_link_name.rs:13:5
   |
13 |     #[link_name = 3]
   |     ^^^^^^^^^^^^^^-^
   |     |             |
   |     |             expected a string literal here
   |     help: must be of the form: `#[link_name = "name"]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link_name-attribute>
